crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__precedence_comparison.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"let x = a + b == c * d\")"
---
NodeRoot@0..22
  NodeApply@0..22
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..22
      NodeApply@8..22
        NodeApplyArgument@8..14
          NodeApply@8..14
            NodeApplyArgument@8..10
              Identifier@8..9 "a"
              Space@9..10 " "
            NodeApplyReceiver@10..11
              Plus@10..11 "+"
            Space@11..12 " "
            NodeApplyArgument@12..14
              Identifier@12..13 "b"
              Space@13..14 " "
        NodeApplyReceiver@14..16
          EqualEqual@14..16 "=="
        Space@16..17 " "
        NodeApplyArgument@17..22
          NodeApply@17..22
            NodeApplyArgument@17..19
              Identifier@17..18 "c"
              Space@18..19 " "
            NodeApplyReceiver@19..20
              Star@19..20 "*"
            Space@20..21 " "
            NodeApplyArgument@21..22
              Identifier@21..22 "d"
