crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__precedence_logical_and_or.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"let x = a || b && c\")"
---
NodeRoot@0..19
  NodeApply@0..19
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..19
      NodeApply@8..19
        NodeApplyArgument@8..10
          Identifier@8..9 "a"
          Space@9..10 " "
        NodeApplyReceiver@10..12
          PipePipe@10..12 "||"
        Space@12..13 " "
        NodeApplyArgument@13..19
          NodeApply@13..19
            NodeApplyArgument@13..15
              Identifier@13..14 "b"
              Space@14..15 " "
            NodeApplyReceiver@15..17
              AmpersandAmpersand@15..17 "&&"
            Space@17..18 " "
            NodeApplyArgument@18..19
              Identifier@18..19 "c"
