crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__precedence_mult_over_add.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"let x = a + b * c\")"
---
NodeRoot@0..17
  NodeApply@0..17
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..17
      NodeApply@8..17
        NodeApplyArgument@8..10
          Identifier@8..9 "a"
          Space@9..10 " "
        NodeApplyReceiver@10..11
          Plus@10..11 "+"
        Space@11..12 " "
        NodeApplyArgument@12..17
          NodeApply@12..17
            NodeApplyArgument@12..14
              Identifier@12..13 "b"
              Space@13..14 " "
            NodeApplyReceiver@14..15
              Star@14..15 "*"
            Space@15..16 " "
            NodeApplyArgument@16..17
              Identifier@16..17 "c"
